TSK-1282: replaced Collections.emptyCollection with List/Map/Set.of